--- a/springLearning/pom.xml
+++ b/springLearning/pom.xml
@@ -15,6 +15,8 @@
         <module>spring_beanInjectProperties</module>
         <module>spring_beanScope</module>
         <module>spring_webBeanScope</module>
+        <module>spring_anno_ioc</module>
+        <module>spring_anno_beanInject</module>
     </modules>
     <dependencies>
         <dependency>
