--- a/springLearning/pom.xml
+++ b/springLearning/pom.xml
@@ -17,14 +17,11 @@
         <module>spring_webBeanScope</module>
         <module>spring_anno_ioc</module>
         <module>spring_anno_beanInject</module>
+        <module>spring_anno_beanScope</module>
+        <module>spring_anno_lazy</module>
+        <module>spring_anno_beanInitAndDestroy</module>
     </modules>
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -34,6 +31,16 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 
